reorg introduction and axis tics from @sbfnk

--- a/paper/library.bib
+++ b/paper/library.bib
@@ -652,3 +652,20 @@
   doi      = "10.1016/j.ijforecast.2022.06.005",
   pmc      = "PMC9247236"
 }
+
+@ARTICLE{Osthus2022-yw,
+  title    = "Fast and accurate influenza forecasting in the United States with
+              Inferno",
+  author   = "Osthus, Dave",
+  journal  = "PLoS Comput. Biol.",
+  volume   =  18,
+  number   =  1,
+  pages    = "e1008651",
+  month    =  jan,
+  year     =  2022,
+  language = "en",
+  issn     = "1553-734X, 1553-7358",
+  pmid     = "35100253",
+  doi      = "10.1371/journal.pcbi.1008651",
+  pmc      = "PMC8830797"
+}
